[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "chromadb>=1.2.0",
    "fastembed>=0.7.3",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "pypdf>=6.1.2",
    "streamlit>=1.50.0",
    "streamlit-chat>=0.1.1",
]
